added carModelProperty
